tests/semantic_cases/invalid/duplicate_var_decl.ob0
MODULE Main;
VAR x, x;
BEGIN
END Main.
